[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/SceneBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/EditTeams.gd" type="Script" id=2]
[ext_resource path="res://assets/img/icon-done.png" type="Texture" id=3]
[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/img/icon-add.png" type="Texture" id=6]
[ext_resource path="res://assets/img/icon-reset.png" type="Texture" id=7]

[node name="EditTeams" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 10.0
margin_right = -40.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer" index="0"]
margin_right = 944.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Teams"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer" index="1"]
margin_top = 65.0
margin_right = 944.0
margin_bottom = 537.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TeamList" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/ScrollContainer" index="0"]
unique_name_in_owner = true
margin_right = 944.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="2"]
margin_top = 557.0
margin_right = 944.0
margin_bottom = 580.0
custom_constants/separation = 15
alignment = 1

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="0"]
margin_left = 320.0
margin_right = 381.0
margin_bottom = 23.0
text = "Done"
icon = ExtResource( 3 )

[node name="AddTeamButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="1"]
margin_left = 396.0
margin_right = 493.0
margin_bottom = 23.0
text = "Add Team"
icon = ExtResource( 6 )

[node name="ResetScoresButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="2"]
margin_left = 508.0
margin_right = 624.0
margin_bottom = 23.0
text = "Reset Scores"
icon = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/AddTeamButton" to="." method="_on_AddTeamButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ResetScoresButton" to="." method="_on_ResetScoresButton_pressed"]
